$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-31 (opened October 3, 2009)

	* ordisurf: pushes out limits of convex hull so that contours
	better cover corners and margins of points.

	* plot.decorana & plot.cca: use linestack() if only one dimension
	was chosen.

	* scores.lda: new function to extract row scores and predictor
	coefficients from "lda" objects (MASS package). Magically,
	ordiplot() started to work with "lda" results. Not yet documented,
	but alias in scores.default.Rd.

	* ordiplot: uses linestack() to plot 1-col results, and now really
	is able to identify if there were no species scores (tried
	earlier, but failed because species had different names than
	sites). 
	
	* scores.default: returns vector scores as 1-col matrix.

	* linestack: passes "..." to plot(), handles missing names.
	
Version 1.16-30 (closed October 3, 2009) 

	* manual pages (Rd files) were run through aspell. With this, an
	error in an argument choice was corrected also in
	plot.nestedtemp function.

	* meandist: plot method has a new alternative of drawing
	histograms (van Sickle 1997) as an alternative to dendrograms. A
	histogram connects groups at theri within-cluster dissimilarity
	level to the average between-cluster dissimilarity.

	* oecosimu: gained new keyword 'alternative' for "two.sided",
	"less" and "greater" one-sided tests.
	
	* oecosimu: tied values in simulations and observed statistics
	treated more correctly. 
	
	* oecosimu: if all simulations were constant, their sd became
	zero, and z became NaN. Now z = 0 for these cases. A response to
	the query of Martin Kopecky at the vegan-help forum in R-Forge.

	* densitplot.oecosimu: panels keep the order of statistics. The
	panels were ordered alphabetically, but the vertical line for the
	observed statistic was in the original order (and thus often in
	the wrong panel).

	* calibrate: is now a a generic function and has a new method for